refactor: change types generation mechanism